--- a/cluster/ansible/roles/common/tasks/main.yaml
+++ b/cluster/ansible/roles/common/tasks/main.yaml
@@ -1,3 +1,9 @@
+# This seems to break couchdb cluster setup
+# - name: Set up proxy
+#   copy:
+#     src: environment
+#     dest: /etc/environment
+
 - name: Install aptitude
   apt: name=aptitude state=latest update_cache=yes force_apt_get=yes
 - name: Install required system packages
