--- a/cluster/ansible/roles/common/tasks/main.yaml
+++ b/cluster/ansible/roles/common/tasks/main.yaml
@@ -1,15 +1,12 @@
-# This seems to break couchdb cluster setup
-# - name: Set up proxy
-#   copy:
-#     src: environment
-#     dest: /etc/environment
-
 - name: Install aptitude
   apt: name=aptitude state=latest update_cache=yes force_apt_get=yes
 - name: Install required system packages
   apt: name={{ item }} state=latest update_cache=yes
   loop: [ 'apt-transport-https', 'ca-certificates', 'curl', 'software-properties-common', 'python3-pip', 'virtualenv', 'python3-setuptools' ]
 - name: Add Docker GPG key
+  environment:
+    http_proxy: 'http://wwwproxy.unimelb.edu.au:8000'
+    https_proxy: 'http://wwwproxy.unimelb.edu.au:8000'
   apt_key:
     url: https://download.docker.com/linux/debian/gpg
     state: present
