Get deployment as services working

--- a/docker/stack/nginx/config/couch.conf
+++ b/docker/stack/nginx/config/couch.conf
@@ -1,13 +1,13 @@
 client_max_body_size 0;
 
 upstream fauxton {
-  server 172.17.0.4:5984;
+  server couch1.:5984;
 }
 
 upstream couch {
-  server 172.17.0.2:5984;
-  server 172.17.0.3:5984;
-  server 172.17.0.4:5984;
+  server couch1.:5984;
+  server couch2.:5984;
+  server couch3.:5984;
 }
 
 server {
