--- a/cluster/heat/stack.yaml
+++ b/cluster/heat/stack.yaml
@@ -3,7 +3,7 @@
 ---
 heat_template_version: 2018-08-31
 description: >
-  A simple deployment of two VMs on Nectar
+  A simple deployment of three VMs on Nectar
   Stores the ip addresses of the servers in 
 
 parameters:
@@ -17,7 +17,7 @@ parameters:
   flavor:
     type: string
     description: Flavor
-    default: t3.xsmall
+    default: uom.mse.1c4g
     constraints:
       - custom_constraint: nova.flavor
         description: Must be an existing flavor
@@ -26,11 +26,6 @@ parameters:
     type: string
     description: Image ID or name
     default: NeCTAR Debian 10 (Buster) amd64
-
-  # availability_zone:
-  #   type: string
-  #   description: Availability Zone
-
 
 resources:
   melbourne_uni_proxy_secgroup:
@@ -123,7 +118,23 @@ resources:
       - { get_resource: couchdb_secgroup }
       networks:
         - allocate_network: auto
+  # worker2:
+  #   # https://docs.openstack.org/heat/latest/template_guide/openstack.html#OS::Nova::Server
+  #   type: OS::Nova::Server
+  #   properties:
+  #     key_name: { get_param: key_name }
+  #     image: { get_param: image }
+  #     flavor: { get_param: flavor }
+  #     tags: ['docker-worker']
+  #     # availability_zone: { get_param: availability_zone }
+  #     security_groups:
+  #     - { get_resource: ssh_secgroup }
+  #     - { get_resource: docker_swarm_secgroup }
+  #     - { get_resource: couchdb_secgroup }
+  #     networks:
+  #       - allocate_network: auto
   
+  # # Not sure how to map OpenStack volumes to Docker containers in a swarm yet
   # couch_vol1:
   #   type: OS::Cinder::Volume
   #   properties:
