--- a/cluster/heat/stack.yaml
+++ b/cluster/heat/stack.yaml
@@ -36,6 +36,19 @@ resources:
           protocol: tcp
           port_range_min: 8000
           port_range_max: 8000
+  
+  http_secgroup:
+    type: OS::Neutron::SecurityGroup
+    properties:
+      rules:
+        - remote_ip_prefix: 0.0.0.0/0
+          protocol: tcp
+          port_range_min: 80
+          port_range_max: 80
+        - remote_ip_prefix: 0.0.0.0/0
+          protocol: tcp
+          port_range_min: 443
+          port_range_max: 443
 
   ssh_secgroup:
     # https://docs.openstack.org/heat/latest/template_guide/openstack.html#OS::Neutron::SecurityGroup
