--- a/docker/stack/couch-link/Dockerfile
+++ b/docker/stack/couch-link/Dockerfile
@@ -1,3 +1,4 @@
+# Assumes the build context is the root of the project
 # Note - Remember to set the 'COUCH_USER' and 'COUCH_PASSWORD'
 # environment variables when runninng this container.
 from bash
