--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,10 @@ python-heatclient = "*"
 openstacksdk = "*"
 jinja2 = "*"
 docker = "*"
+flask = "*"
+couchdb = "*"
+flask-restplus = "*"
+werkzeug = "*"
 
 [dev-packages]
 
