--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "rollup -c",
+    "dev-remote": "HOST=0.0.0.0 rollup -c -w",
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear",
     "validate": "svelte-check"
@@ -25,6 +26,7 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
+    "d3": "^6.7.0",
     "mapbox-gl": "^2.2.0",
     "sirv-cli": "^1.0.0"
   }
