--- a/containers/api/Dockerfile
+++ b/containers/api/Dockerfile
@@ -6,7 +6,9 @@ ENV FLASK_RUN_HOST=0.0.0.0
 ADD app/app.py .
 
 COPY app/requirements.txt app/requirements.txt
-RUN pip install -r app/requirements.txt
+
+# Need proxy here bc docker apparently doesn't pass this down from it's build env
+RUN pip install --proxy=http://wwwproxy.unimelb.edu.au:8000 -r app/requirements.txt
 
 EXPOSE 5000
 
