--- a/containers/nginx/Dockerfile
+++ b/containers/nginx/Dockerfile
@@ -5,4 +5,4 @@ run mkdir -p /etc/nginx/conf.d/sites-enabled
 run ln -s /etc/nginx/conf.d/sites-available/couch.conf /etc/nginx/conf.d/sites-enabled/couch.conf
 copy config/nginx.conf /etc/nginx/nginx.conf
 copy certs /etc/ssl/private
-copy frontend /etc/share/nginx/html
+copy frontend/public /etc/share/nginx/html
