--- a/containers/nginx/config/nginx.conf
+++ b/containers/nginx/config/nginx.conf
@@ -3,6 +3,10 @@ events { }
 http {
   include /etc/nginx/conf.d/sites-enabled/*.conf;
 
+  upstream api {
+    server api.:5000;
+  }
+
   server {
     listen 80;
     listen 443 ssl;
@@ -10,6 +14,17 @@ http {
     ssl_certificate /etc/ssl/private/nginx.pem;
     ssl_certificate_key /etc/ssl/private/privkey.pem;
     ssl_protocols TLSv1.2;
+
+    location /api/ {
+      rewrite /api/(.*) /$1 break;
+
+      proxy_pass http://api;
+
+      proxy_redirect off;
+      proxy_set_header Host $host;
+      proxy_buffering off;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 
     location / {
       include /etc/nginx/mime.types;
