feat: add persistent storage support
Workflow for persistent storage is roughly:
- Added Cinder volumes to OpenStack Heat definition
- Added Ansible tasks to format and mount Cinder block storage devices
  on each VM
- Added Docker step in node_up.py to label each node so that they can be
  uniquely identified.
- Constrain each CouchDB instance to run on a different Docker node and
  mount the block storage volume as CouchDB storage

Test plan:
- Deploy CouchDB as normal, create a 'persistence-test' database with
  one document
- Delete the Docker stack containing the CouchDB service, verify the
  service is no longer available and the containers have been removed
- Re-deploy CouchDB and re-link nodes
- Verify that the 'persistence-test' database and document are still
  present

--- a/cluster/ansible/roles/common/tasks/main.yaml
+++ b/cluster/ansible/roles/common/tasks/main.yaml
@@ -34,3 +34,27 @@
   user:
     name: debian
     groups: 'docker'
+
+- name: Format and mount Cinder block storage
+  filesystem:
+    fstype: ext4
+    # Does Cinder always attach volumes as /dev/vdb? Seems reliable for now...
+    dev: /dev/vdb
+- ansible.posix.mount:
+    path: /mnt/couchstore
+    src: /dev/vdb
+    fstype: ext4
+    state: mounted
+- file:
+    path: /mnt/couchstore
+    group: docker
+    owner: debian
+    mode: u=rwx,g=rwx,o=rwx
+
+- copy:
+    src: docker_daemon_config.json
+    dest: /etc/docker/daemon.json
+# Docker needs to be restarted to pick up the daemon config
+- systemd:
+    name: docker
+    state: restarted
