Use Jinja2 to simplify CouchDB deployment
Instead of hardcoding CouchDB domain names like 'couch0', we can
generate these using Jinja based on the number of nodes available.

This still relies on the assumption that each Couch instance runs on
a separate Docker container, with its own block storage device attached.

Summary of changes:
- Added Jinja template for NGINX / Couch config file
- Replaced hardcoded Couch services with a Jinja loop in
  docker-compose.yaml.jinja2
- Replaced hardcoded Couch domain names in couch-link with generation
  from an environment variable
- Cleaned up template-generation component of node_up.py
- Restructured stack deployment step of node_up.py to make running just
  the template generation faster

Unrelated changes:
- Added a step in node_up.py to build the frontend app
- Fixed OpenStack stack description in cluster/heat/stack.yaml

--- a/cluster/heat/stack.yaml
+++ b/cluster/heat/stack.yaml
@@ -4,7 +4,7 @@
 heat_template_version: 2018-08-31
 description: >
   A simple deployment of three VMs on Nectar
-  Stores the ip addresses of the servers in 
+  Stores the ip addresses of the servers in the stack creation outputs
 
 parameters:
   key_name:
@@ -91,7 +91,7 @@ resources:
     type: OS::Neutron::SecurityGroup
     properties:
       rules:
-        - remote_ip_prefix: 0.0.0.0/0
+        - remote_group_id: { get_resource: ssh_secgroup }
           protocol: tcp
           port_range_min: 5984
           port_range_max: 5984
