--- a/containers/nginx/config/nginx.conf
+++ b/containers/nginx/config/nginx.conf
@@ -8,7 +8,12 @@ http {
   }
 
   server {
-    listen 80;
+    listen 80 default_server;
+
+    return 301 https://$host$request_uri;
+  }
+
+  server {
     listen 443 ssl;
 
     ssl_certificate /etc/ssl/private/nginx.pem;
