feat: integrate harvester into node_up, use jinja to generate heat template
Also bumped up volume storage to 60GB because we have capacity for it in
MRC.

--- a/containers/harvest/Dockerfile
+++ b/containers/harvest/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.10.0a7-buster
 
 ADD harvest.py .
 
-RUN pip install tweepy
-RUN pip install couchdb
+RUN pip install --proxy=http://wwwproxy.unimelb.edu.au:8000 tweepy
+RUN pip install --proxy=http://wwwproxy.unimelb.edu.au:8000 couchdb
 
 CMD [ "python", "./harvest.py"]
